# minecraft-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
collector/: bigquery_writer.py  log_parser.py  main.py  stats_reader.py
dashboard/: app.py
mcp_server/: DOCKER.md  ONBOARDING.md  README.md  queries.py  semantic_layer.py  server.py
schemas/: bigquery_schemas.py
tests/: test_log_parser.py  test_stats_reader.py
